--- a/posts.qmd
+++ b/posts.qmd
@@ -4,6 +4,10 @@ listing:
   contents: posts
   sort: "date desc"
   type: grid
+  grid-item-border: true
+  grid-item-align: left
+  max-description-length: 175
+  date-format: medium
   categories: true
   sort-ui: false
   filter-ui: false
