--- a/talks_workshops.qmd
+++ b/talks_workshops.qmd
@@ -8,7 +8,7 @@ listing:
   grid-item-align: left
   max-description-length: 175
   date-format: medium
-  categories: true
+  categories: numbered
   sort-ui: false
   filter-ui: false
 page-layout: full
