--- a/index.qmd
+++ b/index.qmd
@@ -22,27 +22,30 @@ about:
 
 ### hi there!    
 
-I'm Sam (and my last name is pronounced "chick"). I'm the Data Training Coordinator at the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/) (NCEAS) located at UC Santa Barbara, where I'm working to develop and teach data science training curricula for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) program and other data science initiatives across NCEAS and UCSB. I am also a co-organizer of [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/), a local data science group which works to promote diversity in the R community. In my spare time, you'll typically find me hiking with my pup or cooking family dinners with friends.
+<p class="topbr">I'm Sam (and my last name is pronounced "chick"). I'm the Data Training Coordinator at the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/) (NCEAS) located at UC Santa Barbara, where I'm working to develop and teach data science training curricula for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) program and other data science initiatives across NCEAS and UCSB. I am also a co-organizer of [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/), a local data science group which works to promote diversity in the R community. In my spare time, you'll typically find me hiking with my pup or cooking family dinners with friends.</p>
 
 -----------------------------------------------------------------------------------------------------------------------------------
 
 ### education
 
-<span style = 'font-size: 110%;'>`r fontawesome::fa("graduation-cap", fill = "#98A08D", a11y = "sem")` **MS in Ecology, Evolution & Marine Biology, 2020**</span>  
-<span style = 'font-size: 90%;'>University of California, Santa Barbara</span>
+<div class="topbr">
+<p class="custom-subtitle">`r fontawesome::fa("graduation-cap", fill = "#98A08D", a11y = "sem")` **MS in Ecology, Evolution & Marine Biology, 2020**</p>  
+<p class="custom-subtitle2">University of California, Santa Barbara</p>
 
-<span style = 'font-size: 110%;'>`r fontawesome::fa("graduation-cap", fill = "#98A08D", a11y = "sem")` **BS in Marine Biology, 2016**</span>  
-<span style = 'font-size: 90%;'>Northeastern University</span>
+<p class="custom-subtitle">`r fontawesome::fa("graduation-cap", fill = "#98A08D", a11y = "sem")` **BS in Marine Biology, 2016**</p>  
+<p class="custom-subtitle2">Northeastern University</p>
+</div>
 
 -----------------------------------------------------------------------------------------------------------------------------------
 
 ### experience
 
-<span style = 'font-size: 110%;'>`r fontawesome::fa("chalkboard-teacher", fill = "#98A08D", a11y = "sem")` **Data Training Coordinator, 2021-present**</span>   
-<span style = 'font-size: 90%;'>National Center for Ecological Analysis & Synthesis</span>  
+<div class="topbr">
+<p class="custom-subtitle">`r fontawesome::fa("chalkboard-teacher", fill = "#98A08D", a11y = "sem")` **Data Training Coordinator, 2021-present**</p>   
+<p class="custom-subtitle2">National Center for Ecological Analysis & Synthesis</p>  
 
-<span style = 'font-size: 110%;'>`r fontawesome::fa("chart-bar", fill = "#98A08D", a11y = "sem")` **Data Science Fellow, 2020-2021**</span>    
-<span style = 'font-size: 90%;'>National Center for Ecological Analysis & Synthesis</span>
-
+<p class="custom-subtitle">`r fontawesome::fa("chart-bar", fill = "#98A08D", a11y = "sem")` **Data Science Fellow, 2020-2021**</p>    
+<p class="custom-subtitle2">National Center for Ecological Analysis & Synthesis</p>
+</div>
 
 
