--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -17,9 +17,9 @@ image: quarto.png
 draft: true
 ---
 
-About a year ago, I wrote my first ever blog post ~ about blogging ~ and tbh, I was really hoping to have published a few more posts by now...but here we are, talking again about why blogging is a valuable way to spend your time and feeling a little sad that I haven't done more by now.
+About a year ago, I wrote my first ever blog post ~ about blogging ~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me when I say that blogging is a great exercise for you (to learn a new skill, to expand your professional portfolio/online profile, to connect with others) to practice as regularly as you can. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts.
 
-I. Adding a blog to your personal Quarto website
+## I. Preface
 
 Our Master of Environmental Data Science (MEDS) students created the bones of their Quarto websites a few months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
 
@@ -27,18 +27,67 @@ Our Master of Environmental Data Science (MEDS) students created the bones of th
 
 `r fontawesome::fa("palette", fill = "#64605f", a11y = "sem")` [Customizing Quarto Websites: Make your website stand out using Sass & CSS](https://ucsb-meds.github.io/customizing-quarto-websites/#/title-slide)
 
-If you've spent some time poking around the official [Quarto documentation](https://quarto.org/), you may have noticed instructions for creating either a [**Website**](https://quarto.org/docs/websites/) or a [**Blog**](https://quarto.org/docs/websites/website-blog.html) -- but what's the difference? Not much, aside from the initial structure of your website:
+## II. What's the difference between a website and a blog?
+
+If you've spent some time poking around the official [Quarto documentation](https://quarto.org/), you may have noticed instructions for creating either a [**Website**](https://quarto.org/docs/websites/) or a [**Blog**](https://quarto.org/docs/websites/website-blog.html) -- but what's the difference? Not much, aside from the initial structure:
 
 ```{r}
 #| eval: true
 #| echo: false
-#| label: fig-website-blog
-#| fig-cap: "Quarto websites vs. blogs"
+#| layout-ncol: 2
+#| column: page
 #| fig-subcap: 
-#| - "A Quarto 'Website'"
-#| - "A Quarto 'Blog'"
-#| column: page 
-#| layout-nrow: 2
+#| - "When you create a new Quarto website, it'll look like this (it has a traditional landing (i.e. 'Home') page and no incorporated blog)..."
+#| - "... while a new Quarto blog will look like this (with a listing page is your landing page)"
 knitr::include_graphics("media/website.png")
 knitr::include_graphics("media/blog.png")
+```
+
+A Quarto Blog is *a type* of Quarto Website -- according to the Quarto documentation, you can create websites that consist of just a single blog (like the above right-hand example), websites that have multiple blogs, or you can add a blog to a website that contains other content (which is what we'll be doing today).
+
+Let's get started.
+
+## III. Adding a blog to your personal Quarto website
+
+1. **Create a `posts` directory:** Open up your Quarto website project (I find it easiest to do this in RStudio) and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts`, where all of our blog posts will eventually live. To do so, you can either (a) click on the **add folder** button, <img src="media/add-folder.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the files pane, or (b) in the RStudio Terminal, run `mkdir posts`.
+
+2. ***Optional:* Add a `_metadata.yml` file to `posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file. Open your new file in the source pane to add options. I suggest starting with this: 
+
+```{r}
+#| eval: false
+#| echo: true
+
+# options specified here will apply to all posts in this folder
+
+# freeze computational output (see https://quarto.org/docs/projects/code-execution.html#freeze)
+freeze: true
+
+# Enable banner style title blocks (see https://quarto.org/docs/authoring/title-blocks.html)
+title-block-banner: true
+```
+
+3. **Create a [listing page](https://quarto.org/docs/websites/website-listings.html):** A listing page is a page with content that is automatically generated from a list of Quarto documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out my blog's listing page [here](https://samanthacsik.github.io/posts.html)):
+
+<center><img src="media/listing-page.png"  alt="" width="500"></center>
+<center><p class="gray-italic">The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page</p></center>
+
+- To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* > *New File* > *Quarto Document...*. I gave mine the title "posts" when prompted, then saved it as `posts.qmd`.
+
+4. **Update the YAML section of `posts.qmd`:**
+
+5. **Add your listing page to your website navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
+
+```{r}
+#| eval: false
+#| echo: true
+# ~ parts of `_quarto.yml` omitted for brevity ~
+
+website:
+  navbar:
+    title: myWebsiteTitle
+    right:
+      - href: index.qmd
+        text: home
+      - about.qmd
+      - posts.qmd
 ```
