--- a/talks_workshops/2021-12-15-data-science-with-r-python/index.qmd
+++ b/talks_workshops/2021-12-15-data-science-with-r-python/index.qmd
@@ -34,7 +34,14 @@ knitr::include_graphics("cover_slide.png")
 
 <br>
 
-[`r fontawesome::fa("tv", fill = "#64605F", a11y = "sem")` slides](https://docs.google.com/presentation/d/1jXb8wbcP2f7flSfLMoX2gui70G67XRjftJRMLselOlE/edit?usp=sharing) ~~ [`r fontawesome::fa("github-square", fill = "#64605F", a11y = "sem")` GitHub Repo](https://github.com/samanthacsik/RLadiesSB-RvsPython) ~~ [`r fontawesome::fa("video", fill = "#64605F", a11y = "sem")` recording](https://drive.google.com/file/d/1OenD9vq8pr558iuk1th2fjZBRs9sWoXt/view) ~~ [`r fontawesome::fa("meetup", fill = "#64605F", a11y = "sem")` Meetup Event](https://www.meetup.com/rladies-santa-barbara/events/281807986/)
+<div class="container">
+<div class="center">
+<button type="button" class="button-styling" onclick=window.location.href='https://docs.google.com/presentation/d/1jXb8wbcP2f7flSfLMoX2gui70G67XRjftJRMLselOlE/edit?usp=sharing'>`r fontawesome::fa("tv", fill = "#64605f", a11y = "sem")` slides</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/samanthacsik/RLadiesSB-RvsPython'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://www.meetup.com/rladies-santa-barbara/events/281807986/'>`r fontawesome::fa("meetup", fill = "#64605f", a11y = "sem")` meetup event</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://drive.google.com/file/d/1OenD9vq8pr558iuk1th2fjZBRs9sWoXt/view'>`r fontawesome::fa("video", fill = "#64605f", a11y = "sem")` recording</button> 
+</div>
+</div>
 
 # Overview
 
