--- a/talks_workshops/2022-04-18-intro-to-cloud-computing/index.qmd
+++ b/talks_workshops/2022-04-18-intro-to-cloud-computing/index.qmd
@@ -10,7 +10,7 @@ author:
     affiliation-url: https://ucsb-meds.github.io/
 date: 2022-04-18
 slug: csik2022cloudComputing
-categories: [MEDS]
+categories: [MEDS, AWS]
 image: clouds.gif
 ---
 
@@ -24,7 +24,12 @@ xaringanExtra::embed_xaringan(
 
 <br>
 
-[`r fontawesome::fa("tv", fill = "#64605F", a11y = "sem")` slides](https://ucsb-meds.github.io/cloud-computing/#1) ~~ [`r fontawesome::fa("github-square", fill = "#64605F", a11y = "sem")` source code](https://github.com/UCSB-MEDS/cloud-computing)
+<div class="container">
+<div class="center">
+<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/cloud-computing/#1'>`r fontawesome::fa("tv", fill = "#64605f", a11y = "sem")` slides</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/cloud-computing'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
+</div>
+</div>
 
 # Overview
 
