--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -38,7 +38,7 @@ If you've spent some time poking around the official [Quarto documentation](http
 #| column: page
 #| fig-subcap: 
 #| - "When you create a new Quarto website, it'll look like this (it has a traditional landing (i.e. 'Home') page and no incorporated blog)..."
-#| - "... while a new Quarto blog will look like this (with a listing page is your landing page)"
+#| - "... while a new Quarto blog will look like this (with a listing page as your landing page)"
 knitr::include_graphics("media/website.png")
 knitr::include_graphics("media/blog.png")
 ```
@@ -66,14 +66,25 @@ freeze: true
 title-block-banner: true
 ```
 
-3. **Create a [listing page](https://quarto.org/docs/websites/website-listings.html):** A listing page is a page with content that is automatically generated from a list of Quarto documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out my blog's listing page [here](https://samanthacsik.github.io/posts.html)):
+3. **Create a [listing page](https://quarto.org/docs/websites/website-listings.html):** A listing page is a page with content that is automatically generated from a list of documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out my blog's listing page [here](https://samanthacsik.github.io/posts.html)):
 
 <center><img src="media/listing-page.png"  alt="" width="500"></center>
 <center><p class="gray-italic">The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page</p></center>
 
-- To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* > *New File* > *Quarto Document...*. I gave mine the title "posts" when prompted, then saved it as `posts.qmd`.
+- To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* > *New File* > *Quarto Document...*. Here, I give mine the title "My Blog" when prompted, then saved it as `posts.qmd` (but you can choose whatever title and/or file name you'd like).
 
-4. **Update the YAML section of `posts.qmd`:**
+4. **Configure your listing page:** Update the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but check out other options [here](https://quarto.org/docs/websites/website-listings.html):
+
+```{r}
+#| eval: false
+#| echo: true
+title: "My Blog"
+listing: 
+  contents: posts # includes all Quarto docs in the `posts` directory
+  type: grid # or default or table; each type has its own set of yaml options to include
+  sort: "date desc" # can also sort on more than one field
+  categories: true # allows you to sort posts by assigned categories 
+```
 
 5. **Add your listing page to your website navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
 
@@ -89,5 +100,53 @@ website:
       - href: index.qmd
         text: home
       - about.qmd
-      - posts.qmd
+      - posts.qmd # add your posts.qmd file to your navbar!
 ```
+
+6. **Preview or Render your website:** Make sure your listing page shows up by previewing or rendering your website. You should have something that looks like this:
+
+```{r}
+#| eval: true
+#| echo: false
+knitr::include_graphics("media/blog-added.png")
+```
+
+## IV. Add a blog post to your blog
+
+Now that you have your listing page set up, we can start populating it with blog posts. Repeat the following steps each time you want to add a new post.
+
+1. **Create a subdirectory *inside* your `posts` directory:** To stay organized, I usually name mine `YYYY-MM-DD-short-post-description`. This folder name will also become the [slug](https://developer.mozilla.org/en-US/docs/Glossary/Slug) for your published post.
+
+2. **Inside your new subdirectory, create a new `.qmd` file called `index.qmd`.** The name here is important! It *must* be called `index.qmd`. Your file path should look something like this: `mywebsite/posts/2022-10-24-my-blog-post/index.qmd`.
+
+3. **Configure your blog post:** You can add a variety of different options to the YAML section of `index.qmd`. Here are my go-to options:
+
+```{r}
+#| eval: false
+#| echo: true
+---
+title: "blog post title"
+description: |
+  blog post description (appears underneath the title in smaller text) which is included on the listing page
+author:
+  - name: Samantha Csik
+    url: https://samanthacsik.github.io/
+    orcid: 0000-0002-5300-3075
+    affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis & Synthesis
+    affiliation-url: https://ucsb-meds.github.io/ 
+date: 10-24-2022
+categories: [Quarto, R, MEDS] # self-defined categories
+citation: 
+  url: https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/ 
+image: preview_image.jpg
+draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+---
+```
+
+- You should include a *title*, but don't necessarily need a *description* (although I think they're nice to have!). Both of these fields will appear on your listing page.
+
+- You can include more than one *author* -- see [this post](https://samanthacsik.github.io/posts/2022-06-22-hello_quarto/) and [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-06-22-hello_quarto/index.qmd) as an example.
+
+- You may includes as many self-defined *categories* as you'd like. Make sure that your spelling/capitalization/punctuation is consistent across blog posts should you apply the same categories to multiple posts.
+
+- Adding the *citation* option automatically generates a BibTeX citation and 
