--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Adding a blog to your existing Quarto website"
 description: |
-  Got a Quarto website, but no listing page? We can fix that!
+  Got a Quarto website, but no blog? We can fix that!
 author:
   - name: Samantha Csik
     url: https://samanthacsik.github.io/
@@ -17,11 +17,15 @@ image: quarto.png
 draft: true
 ---
 
-About a year ago, I wrote my first ever blog post ~ about blogging ~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me when I say that blogging is a great exercise for you (to learn a new skill, to expand your professional portfolio/online profile, to connect with others) to practice as regularly as you can. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts.
+About a year ago, I wrote my first ever blog post ~ about blogging ~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you (to learn a new skill, to expand your professional portfolio/online profile, to connect with others) to practice as regularly as you can. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts. And if you take just one thing away from all this, it's this tweet:
 
-## I. Preface
+[^1]: Okay, you don't *just* have to trust me. Lots of data scientists advocate for blogging as an important skill and communication tool. Check out this [blog post](http://varianceexplained.org/r/start-blog/) by [David Robinson](https://twitter.com/drob) to start.
+  
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">When you’ve written the same code 3 times, write a function<br><br>When you’ve given the same in-person advice 3 times, write a blog post</p>&mdash; David Robinson (@drob) <a href="https://twitter.com/drob/status/928447584712253440?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-Our Master of Environmental Data Science (MEDS) students created the bones of their Quarto websites a few months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
+## I. Before we chat about blogs...
+
+Our [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) students created the bones of their Quarto websites a few months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
 
 `r fontawesome::fa("window-maximize", fill = "#64605f", a11y = "sem")` [Creating your personal website using Quarto](https://ucsb-meds.github.io/creating-quarto-websites/)
 
@@ -45,13 +49,21 @@ knitr::include_graphics("media/blog.png")
 
 A Quarto Blog is *a type* of Quarto Website -- according to the Quarto documentation, you can create websites that consist of just a single blog (like the above right-hand example), websites that have multiple blogs, or you can add a blog to a website that contains other content (which is what we'll be doing today).
 
-Let's get started.
-
 ## III. Adding a blog to your personal Quarto website
 
-1. **Create a `posts` directory:** Open up your Quarto website project (I find it easiest to do this in RStudio) and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts`, where all of our blog posts will eventually live. To do so, you can either (a) click on the **add folder** button, <img src="media/add-folder.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the files pane, or (b) in the RStudio Terminal, run `mkdir posts`.
+TL;DR: A couple of steps are required for setting up your blog, but generally speaking, you'll need:
 
-2. ***Optional:* Add a `_metadata.yml` file to `posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file. Open your new file in the source pane to add options. I suggest starting with this: 
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a folder (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder   
+
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a listing page, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`   
+
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` blog posts! Your listing page will be blank until you actually add your first blog post
+
+Let's create those together now.
+
+1. **Create a `/posts` folder:** Open up your Quarto website project (I find it easiest to do this in RStudio) and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts` (you can call this whatever you want), where all of our blog posts will eventually live. To do so, you can either (a) click on the **add folder** button, <img src="media/add-folder.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane, or (b) in the RStudio Terminal, run `mkdir posts`. 
+
+2. ***Optional:* Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file. Open your `_metadata.yml` in the Source pane to add options. I like these options[^2], but it's entirely up to you what you want to include (if anything at all): 
 
 ```{r}
 #| eval: false
@@ -59,21 +71,29 @@ Let's get started.
 
 # options specified here will apply to all posts in this folder
 
-# freeze computational output (see https://quarto.org/docs/projects/code-execution.html#freeze)
-freeze: true
+# re-render posts only when source changes (for more, see https://quarto.org/docs/projects/code-execution.html#freeze)
+freeze: auto
 
-# Enable banner style title blocks (see https://quarto.org/docs/authoring/title-blocks.html)
+# enable banner style title blocks (see https://quarto.org/docs/authoring/title-blocks.html)
 title-block-banner: true
 ```
 
+[^2]: **The `freeze` option:** Setting this option to `auto` will *only* re-render posts when you make updates to the source files (as opposed to re-rendering them each time you **Render Website** -- this can save time, particularly if you have computationally-heavy content in your blog posts). If you set this option to `true`, posts will *never* be re-rendered (even if you've made changes to the source files). If you use this option, you'll need to **Render** individual posts whenever you make changes to their source files *before* you **Render Website**, otherwise your updates will not appear. 
+
+    The `title-block-banner` option: Setting this option to `true` will enable a [banner style title block](https://quarto.org/docs/authoring/title-blocks.html#title-banners) (where the title, subtitle, description, and categories are all positioned inside the banner) for all posts. 
+
 3. **Create a [listing page](https://quarto.org/docs/websites/website-listings.html):** A listing page is a page with content that is automatically generated from a list of documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out my blog's listing page [here](https://samanthacsik.github.io/posts.html)):
 
-<center><img src="media/listing-page.png"  alt="" width="500"></center>
-<center><p class="gray-italic">The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page</p></center>
+```{r}
+#| eval: true
+#| echo: false
+#| fig-cap: "The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page, with multiple blog posts arranged in the default-style layout -- Quarto has multiple listing page layout options (more on that to come)"
+knitr::include_graphics("media/listing-page.png")
+```
 
-- To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* > *New File* > *Quarto Document...*. Here, I give mine the title "My Blog" when prompted, then saved it as `posts.qmd` (but you can choose whatever title and/or file name you'd like).
+- To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* > *New File* > *Quarto Document...*. Below, I give mine the title "My Blog" when prompted (this name appears at the top of your listing page), then saved it as `posts.qmd` (but you can choose whatever title and/or file name you'd like).
 
-4. **Configure your listing page:** Update the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but check out other options [here](https://quarto.org/docs/websites/website-listings.html):
+4. **Configure your listing page:** Specify how you'd like your listing page to be arranged by updating the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but check out other options [here](https://quarto.org/docs/websites/website-listings.html):
 
 ```{r}
 #| eval: false
@@ -81,12 +101,12 @@ title-block-banner: true
 title: "My Blog"
 listing: 
   contents: posts # includes all Quarto docs in the `posts` directory
-  type: grid # or default or table; each type has its own set of yaml options to include
+  type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
 ```
 
-5. **Add your listing page to your website navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
+5. **Add your listing page to your website's navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
 
 ```{r}
 #| eval: false
@@ -103,7 +123,7 @@ website:
       - posts.qmd # add your posts.qmd file to your navbar!
 ```
 
-6. **Preview or Render your website:** Make sure your listing page shows up by previewing or rendering your website. You should have something that looks like this:
+6. **Preview or Render your website:** Make sure your listing page shows up by previewing or rendering your website (you can do either of these from the **Build** tab in RStudio. You should have something that looks like this (we haven't created any posts yet, so it'll be empty for now):
 
 ```{r}
 #| eval: true
@@ -117,7 +137,7 @@ Now that you have your listing page set up, we can start populating it with blog
 
 1. **Create a subdirectory *inside* your `posts` directory:** To stay organized, I usually name mine `YYYY-MM-DD-short-post-description`. This folder name will also become the [slug](https://developer.mozilla.org/en-US/docs/Glossary/Slug) for your published post.
 
-2. **Inside your new subdirectory, create a new `.qmd` file called `index.qmd`.** The name here is important! It *must* be called `index.qmd`. Your file path should look something like this: `mywebsite/posts/2022-10-24-my-blog-post/index.qmd`.
+2. **Inside your new subdirectory, create an `index.qmd` file.** The name here is important! It *must* be called `index.qmd`. Your file path should look something like this: `mywebsite/posts/2022-10-24-my-blog-post/index.qmd`.
 
 3. **Configure your blog post:** You can add a variety of different options to the YAML section of `index.qmd`. Here are my go-to options:
 
@@ -126,8 +146,7 @@ Now that you have your listing page set up, we can start populating it with blog
 #| echo: true
 ---
 title: "blog post title"
-description: |
-  blog post description (appears underneath the title in smaller text) which is included on the listing page
+description: "blog post description (appears underneath the title in smaller text) which is included on the listing page"
 author:
   - name: Samantha Csik
     url: https://samanthacsik.github.io/
@@ -139,9 +158,11 @@ categories: [Quarto, R, MEDS] # self-defined categories
 citation: 
   url: https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/ 
 image: preview_image.jpg
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 ---
 ```
+
+Some notes on the above options: 
 
 - You should include a *title*, but don't necessarily need a *description* (although I think they're nice to have!). Both of these fields will appear on your listing page.
 
@@ -149,4 +170,48 @@ draft: true # setting this to `true` will prevent your post from appearing on yo
 
 - You may includes as many self-defined *categories* as you'd like. Make sure that your spelling/capitalization/punctuation is consistent across blog posts should you apply the same categories to multiple posts.
 
-- Adding the *citation* option automatically generates a BibTeX citation and 
+- Adding the *citation* option automatically generates both a [BibTeX citation](https://en.wikipedia.org/wiki/BibTeX) and reference for your blog post, and adds them to the bottom of your post.
+
+- Include an image (or gif) to add as a *preview image*, which will appear on your listing page alongside your post. Your image should live inside your post's subdirectory (e.g. `mywebsite/posts/2022-10-24-my-blog-post/preview-image.png`).
+
+```{r}
+#| eval: true
+#| echo: false
+#| layout-ncol: 2
+#| column: page
+#| fig-subcap: 
+#| - "A grid-style listing page featuring one blog post with a preview image, title, three categories, description, author, and publishing date"
+#| - "An example blog post, with a banner style title block"
+knitr::include_graphics("media/ex-listing-page.png")
+knitr::include_graphics("media/my-first-post.png")
+```
+
+If things aren't working as expected, double check your repository structure -- it should look something like this:
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: center
+knitr::include_graphics("media/repo.png")
+```
+
+## V. Making your posts look pretty
+
+- on this page (generated from level 1/2/3 headers)
+- footnotes
+- citations (use visual editor)
+- same Quarto features apply -- photos/text in margins, embeddign code + outputs, etc.
+
+## VI. Blogs to follow (+ one post from each that I've particularly enjoyed)
+
+There are *tons* of awesome data science bloggers out there, and (at the cost of sounding like a broken record) Twitter is a great place to find them. Here are just a few I've been reading and enjoying as of late, but get out there and start exploring others for yourself!
+
+* [Piping Hot Data](https://www.pipinghotdata.com/blog.html), by Shannon Pileggi -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [@PipingHotData](https://twitter.com/PipingHotData) and check out her post, [Curating for @WeAreRLadies on Twitter](https://www.pipinghotdata.com/posts/2021-09-23-curating-for-wearerladies-on-twitter/)
+
+* [Meghan Hall's Blog](https://meghan.rbind.io/blog/) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [@MeghanMHall](https://twitter.com/MeghanMHall) and check out her post, [Increasing the Flexibility and Robustness of Plots in ggplot2
+](https://meghan.rbind.io/blog/plot-robustness/)
+
+* [Cosima Meyer's Blog](https://cosimameyer.com/#post) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [@cosima_meyer](https://twitter.com/cosima_meyer) and check out her post, [Understanding the Basics of Package Writing in R](https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/) 
+
+* [Notes from a Data Witch](https://blog.djnavarro.net/) by Danielle Navarro -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [@djnavarro](https://twitter.com/djnavarro) and check out her post, [Getting started with Apache Arrow](https://blog.djnavarro.net/posts/2021-11-19_starting-apache-arrow-in-r/)
+
