--- a/talks_workshops/2022-10-10-customizing-quarto-websites/index.qmd
+++ b/talks_workshops/2022-10-10-customizing-quarto-websites/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Customizing Quarto Websites"
 description: |
-  Make your website stand out using Sass & CSS
+  make your website stand out using Sass & CSS
 author: 
   - name: "Samantha Csik"
     url: https://samanthacsik.github.io/
